# infinite-mac

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  eslint.config.mjs  funding.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts  wrangler.jsonc  wrangler.toml
Art/: Aqua 10.0 to 10.4 evolution.acorn  Aqua Button.acorn  Aqua Checkbox.acorn  Aqua Custom Instance.acorn  Aqua Dialog Frame.acorn  Aqua Round Button.tga  Aqua Select.acorn  Checkbox.acorn  Classic and Platinum Buttons.acorn  Dialog Frame.acorn  Finder 16x16.psd  Finder 32x32.psd  Floppy.acorn  Footer.acorn  Header (2024).acorn  Header.acorn  Icon 192 (2024).acorn  Icon 192.psd  Icon 512 (2024).acorn  Icon 512.psd  Infinite HD Icon.acorn  Infinite HD Icon.psd  Infinite Mac Browser.acorn  Launch.acorn  Mac OS 9 with Pinstripe Bezel.acorn  Saved HD Icon.acorn  Saved HD.acorn  Select.acorn  System 6.acorn  The Outside World.acorn  The Outside World.psd  infinite-mac-ethernet.excalidraw
Images/: Infinite HD (MFS).dsk  Infinite HD.dsk  KanjiTalk 7.5.3 HD.dsk  Mac OS 7.6 HD.dsk  Mac OS 8.0 HD.dsk  Mac OS 8.1 Disk Tools 68K FD.dsk  Mac OS 8.1 Disk Tools PPC FD.dsk  Mac OS 8.1 HD.dsk  Mac OS 8.5 HD.dsk  Mac OS 8.6 HD.dsk  Mac OS 9.0 HD.dsk  Mac OS 9.0.4 HD.dsk  Mac OS 9.1 HD.dsk  Mac OS 9.2.2 HD.dsk  NeXTSTEP 3.3 HD.dsk  Speed Disk 3.1.3.dsk  System 1.0 (Original).dsk  System 1.0.dsk  System 1.1.dsk  System 2.0.dsk  System 2.1.dsk  System 3.0.dsk  System 3.2.dsk  System 3.3.dsk  (+25 more)
(+618 files in other folders)
